[package]
name = "seeing_noise"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.24.0"
js-sys = "0.3.81"
paste = "1.0.15"
squirrel_noise5 = { version = "1.1.1" }
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["ImageData", "CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "HtmlInputElement", "Event", "HtmlSelectElement"] }
