[package]
name = "seeing_noise"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.81"
paste = "1.0.15"
rayon = "1.11.0"
squirrel_noise5 = { version = "1.1.2" }
wasm-bindgen = "0.2.104"
wasm-bindgen-rayon = "1.3.0"
web-sys = { version = "0.3.81", features = ["ImageData", "CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "HtmlInputElement", "Event", "HtmlSelectElement"] }
